# aethelred

./: .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .release-please-manifest.json  AUDIT_INDEX.txt  Aethelred Tokenomics.csv  CHANGELOG.md  CODEOWNERS  COMPARISON_REPORT.txt  CONTRIBUTING.md  DISCREPANCIES_SUMMARY.txt  Dockerfile  EXECUTIVE_SUMMARY.txt  Makefile  README.md  SECURITY.md  SUPPORT.md  TECHNICAL_PARAMETERS_AUDIT.txt  buf.yaml  go.mod  go.sum  release-please-config.json  repo-authority.json  repo-role.json  run_exploit_simulations.go  security_best_practices_report.md  version-matrix.json
crates/: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: inference_bench.rs  memory_bench.rs  training_bench.rs
crates/benchmarks/src/: hardware.rs  inference.rs  lib.rs  memory.rs  network.rs  regression.rs  reporter.rs  training.rs
crates/bridge/: Cargo.toml
crates/bridge/fuzz/: Cargo.toml
crates/bridge/fuzz/fuzz_targets/: fuzz_bridge_event_parsing.rs  fuzz_bridge_state_transition.rs
crates/bridge/src/: aethelred.rs  config.rs  consensus.rs  error.rs  ethereum.rs  lib.rs  main.rs  metrics.rs  processor.rs  storage.rs  types.rs
crates/consensus/: Cargo.toml
crates/consensus/benches/: consensus_benchmarks.rs
crates/consensus/fuzz/: Cargo.toml
crates/consensus/fuzz/fuzz_targets/: fuzz_reputation_score.rs  fuzz_vrf_prove_verify.rs
crates/consensus/src/: error.rs  kani_proofs.rs  lib.rs  metrics.rs  reputation.rs  traits.rs  types.rs  vrf.rs
crates/consensus/src/pouw/: config.rs  consensus.rs  election.rs  mod.rs
crates/consensus/src/tests/: consensus_coverage_test.rs  metrics_config_traits_coverage_test.rs  miner_boost_test.rs  mod.rs  reputation_coverage_test.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/benches/: crypto_benchmarks.rs
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: fuzz_hybrid_pubkey_from_bytes.rs  fuzz_hybrid_signature_from_bytes.rs  fuzz_kyber_pubkey_from_bytes.rs  fuzz_signature_roundtrip.rs
crates/core/src/: kani_proofs.rs  lib.rs
crates/core/src/crypto/: dilithium.rs  ecdsa.rs  hash.rs  hybrid.rs  kat_tests.rs  kyber.rs  mod.rs  signer.rs
crates/core/src/pillars/: bicameral_governance.rs  mod.rs  quadratic_burn.rs  quantum_immunity.rs  secret_mempool.rs  tensor_precompiles.rs  useful_work.rs  vector_vault.rs  zero_copy_bridge.rs
crates/core/src/transport/: kyber_libp2p.rs  mod.rs
crates/core/src/types/: address.rs  block.rs  job.rs  mod.rs  seal.rs  transaction.rs
crates/demo/falcon-lion/: Cargo.toml
crates/demo/falcon-lion/benches/: trade_benchmarks.rs
crates/demo/falcon-lion/src/: compliance.rs  demo.rs  error.rs  lib.rs  main.rs  settlement.rs  types.rs
crates/demo/helix-guard/: Cargo.toml
crates/demo/helix-guard/src/: demo.rs  discovery.rs  error.rs  (+5 more)
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/config/: default_cloud_pricing.json
crates/sandbox/examples/: ctf_challenge.rs  q_day_simulation.rs  trade_finance_demo.rs
crates/sandbox/src/: lib.rs
crates/sandbox/tests/: integration_flows.rs
crates/testing/: Cargo.toml
crates/testing/benches/: framework_benchmarks.rs
crates/testing/src/: assertions.rs  coverage.rs  fixtures.rs  lib.rs  mocking.rs  property.rs  reporter.rs  runner.rs  snapshot.rs
crates/vault/: Cargo.toml
crates/vault/src/: attestation.rs  lib.rs  mev_protection.rs  reward_calculator.rs  server.rs  types.rs  validator_selection.rs
crates/vm/: Cargo.toml
crates/vm/benches/: tee_bench.rs  zkml_precompile_bench.rs
crates/vm/fuzz/: Cargo.toml
crates/vm/src/: error.rs  gas.rs  host.rs  kani_proofs.rs  lib.rs  memory.rs
sdk/aethelred-py/: Cargo.full-online.toml  Cargo.offline.toml  pyproject.toml
sdk/aethelred-py/src/: lib.rs  lib_full.rs
sdk/aethelred-sdk/: Cargo.toml
sdk/aethelred-sdk/benches/: crypto_benchmarks.rs
sdk/aethelred-sdk/src/: lib.rs  lib_full.rs
sdk/python/: .coverage  .gitignore  README.md  coverage.json  pyproject.toml
sdk/python/aethelred/: __init__.py  cli.py
sdk/python/build_backend/: README.md  aethelred_build_backend.py
sdk/python/examples/: credit_scoring.py  enterprise_hybrid.py  framework_integrations.py  model_conversion.py  proof_verification.py
sdk/python/tests/: conftest.py  test_client.py  test_client_comprehensive.py  test_compliance.py  test_config.py  test_converter.py  test_coverage_boost.py  test_coverage_compliance.py  test_coverage_core.py  test_coverage_crypto.py  test_coverage_distributed.py  test_coverage_final.py  test_coverage_final2.py  test_coverage_models.py  test_coverage_nn.py  test_coverage_optim.py  test_coverage_oracles.py  test_coverage_quantize.py  test_coverage_realtime.py  test_coverage_remaining.py  test_coverage_runtime.py  test_coverage_tensor.py  test_crypto_fallback.py  test_enterprise_hybrid.py  test_exceptions.py  test_framework_integrations.py  test_full_coverage.py  test_hardware_compiler.py  test_integrations_comprehensive.py  test_jobs.py  test_jobs_comprehensive.py  test_model_registry.py  test_oracle_client.py  test_pqc_crypto.py  test_proof_generator.py  test_provenance.py  test_sdk_core_modules_modern.py  test_seals.py  test_seals_comprehensive.py  test_types.py  (+5 more)
services/tee-worker/nitro-sdk/: Cargo.full-online.toml  Cargo.toml
tools/cli/: Cargo.toml  README.md
tools/cli/aeth/: README.md  package.json  tsconfig.json
tools/cli/aethel/: README.md  package-lock.json  package.json
tools/cli/model-registry/: README.md  package-lock.json  package.json
tools/cli/seal-verifier/: README.md  package-lock.json  package.json  tsconfig.json
tools/cli/src/: config.rs  interactive.rs  main.rs  utils.rs
tools/cli/tests/: integration_tests.rs
tools/testnet/: Cargo.toml
tools/testnet/benches/: faucet_bench.rs  transaction_bench.rs
tools/testnet/src/: api.rs  chaos.rs  chaos_event.rs  compliance_validators.rs  core.rs  debug.rs  environments.rs  explorer.rs  faucet.rs  lib.rs  pow_faucet.rs  profiling.rs  reset.rs  tee_debugger.rs  truth_dashboard.rs  validators.rs  webhooks.rs
(+13572 files in other folders)
