[workspace]
members = [
    "core",
    "bridge",
    "consensus",
    "mempool",
    "vm",
    "vault",
    "benchmarks",
    "testing",
    "sandbox",
    "demo/falcon-lion",
    "demo/helix-guard",
]
exclude = [
    "bridge/fuzz",
    "consensus/fuzz",
    "core/fuzz",
    "vm/fuzz",
]
resolver = "2"
