[package]
name = "aethelred-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Aethelred Team"]
description = "Ethereum <-> Aethelred Bridge Relayer"
license = "Apache-2.0"
repository = "https://github.com/aethelred/aethelred-node"
keywords = ["blockchain", "bridge", "ethereum", "relayer"]
categories = ["blockchain", "cryptography"]

[features]
default = ["std"]
std = []
# Use mock Ethereum provider for testing
mock-eth = []
# Enable full production mode with hardware signing
production = ["hsm"]
# Hardware Security Module support
hsm = []

[dependencies]
tokio = { version = "1.35", features = ["full", "sync", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[lints]
workspace = true
