[package]
name = "aethelred-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Aethelred Team"]
description = "Aethelred Proof-of-Useful-Work consensus engine with VRF leader election"
license = "Apache-2.0"
repository = "https://github.com/aethelred/aethelred-node"
keywords = ["blockchain", "consensus", "proof-of-useful-work", "vrf", "ai"]
categories = ["blockchain", "cryptography"]

[features]
default = ["std"]
std = []
# Enable real VRF implementation using arkworks
vrf = ["dep:ark-ec", "dep:ark-ff", "dep:ark-serialize", "dep:ark-std"]
# Alternative VRF using schnorrkel (Substrate-compatible)
schnorrkel-vrf = ["schnorrkel"]
# Testing/development mode with deterministic VRF
mock-vrf = []
# Enable hardware acceleration for VRF
simd = []
# Full production mode with all crypto
full = ["vrf", "simd"]

[dependencies]
# =============================================================================
# Core Aethelred crate
# =============================================================================
aethelred-core = { path = "../core" }

# =============================================================================
# Async Runtime
# =============================================================================
tokio = { version = "1.35", features = ["full", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"

# =============================================================================
# Serialization & Error Handling
# =============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"

# =============================================================================
# Encoding
# =============================================================================
hex = "0.4"
base64 = "0.21"

# =============================================================================
# Cryptography - VRF (Verifiable Random Function)
# =============================================================================
# ECDSA for VRF key management
k256 = { version = "0.13", features = ["ecdsa", "sha256", "serde", "hash2curve"] }
# Arkworks for ECVRF implementation
ark-ec = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
schnorrkel = { version = "0.11", optional = true }

# =============================================================================
# Hashing
# =============================================================================
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"

# =============================================================================
# Big Integer Arithmetic
# =============================================================================
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"

# =============================================================================
# Data Structures
# =============================================================================
parking_lot = "0.12"
dashmap = "5.5"
indexmap = { version = "2.1", features = ["serde"] }

# =============================================================================
# Time
# =============================================================================
chrono = { version = "0.4", features = ["serde"] }

# =============================================================================
# Random Number Generation
# =============================================================================
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.10"

# =============================================================================
# Merkle Tree
# =============================================================================
rs_merkle = "1.4"

# =============================================================================
# Metrics
# =============================================================================
prometheus = "0.13"

# =============================================================================
# Memory Safety
# =============================================================================
zeroize = { version = "1.7", features = ["derive", "zeroize_derive"] }

# =============================================================================
# Logging
# =============================================================================
tracing = "0.1"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.9"
test-case = "3.3"
proptest = "1.4"

[[bench]]
name = "consensus_benchmarks"
harness = false
