[package]
name = "aethelred-vm"
version = "0.1.0"
edition = "2021"
authors = ["Aethelred Team"]
description = "Aethelred Virtual Machine with PQC and TEE precompiles"
license = "Apache-2.0"
repository = "https://github.com/aethelred/aethelred-node"
keywords = ["blockchain", "vm", "wasm", "precompiles", "tee"]
categories = ["blockchain", "wasm"]

[features]
default = ["std", "wasmer-runtime"]
std = []
# WASM runtime backend selection
wasmer-runtime = ["wasmer", "wasmer-middlewares"]
wasmtime-runtime = ["wasmtime"]
# Mock TEE for development
mock-tee = []
# Full SGX DCAP verification
sgx = []
# ZK proof verification
zkp = []

[dependencies]
# =============================================================================
# Core Aethelred crate
# =============================================================================
aethelred-core = { path = "../core" }

# =============================================================================
# Async Runtime
# =============================================================================
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# =============================================================================
# Serialization & Error Handling
# =============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# =============================================================================
# Encoding
# =============================================================================
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"

# =============================================================================
# WASM Runtime - Wasmer (Primary)
# =============================================================================
wasmer = { version = "4.2", optional = true, features = ["cranelift", "singlepass"] }
wasmer-middlewares = { version = "4.2", optional = true }

# =============================================================================
# WASM Runtime - Wasmtime (Alternative)
# =============================================================================
wasmtime = { version = "16.0", optional = true }

# =============================================================================
# Cryptography for Precompiles
# =============================================================================
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
k256 = { version = "0.13", features = ["ecdsa"] }

# =============================================================================
# Post-Quantum Cryptography
# =============================================================================
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# =============================================================================
# ZK Proof Verification (arkworks)
# =============================================================================

# =============================================================================
# CBOR for Nitro attestation
# =============================================================================
ciborium = "0.2"
coset = "0.3"

# =============================================================================
# X.509 for certificate verification
# =============================================================================
x509-cert = "0.2"
der = "0.7"
webpki = "0.22"
webpki-roots = "0.26"

# =============================================================================
# Memory & Performance
# =============================================================================
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"

# =============================================================================
# Metrics
# =============================================================================
prometheus = "0.13"

# =============================================================================
# Logging
# =============================================================================
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.9"
test-case = "3.3"

# [[bench]]
# name = "precompile_benchmarks"
# harness = false
