[package]
name = "aethelred-sdk"
version = "0.1.0"
edition = "2021"
description = "Verifiable Compute Chain (VCC) toolkit with explicit compute-backend guarantees"
license = "Apache-2.0"
repository = "https://github.com/aethelred/aethelred-sdk"
keywords = ["blockchain", "ai", "tee", "zk", "verifiable-compute"]
categories = ["cryptography", "development-tools", "wasm"]
readme = "README.md"

[lib]
name = "aethelred_sdk"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aethel"
path = "src/bin/aethel.rs"
required-features = ["full-sdk"]

[[bin]]
name = "aethel-seal"
path = "src/bin/aethel_seal.rs"
required-features = ["full-sdk"]

[[bin]]
name = "aethel-registry"
path = "src/bin/aethel_registry.rs"
required-features = ["full-sdk"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
sha2 = "0.11"

[features]
default = ["offline-minimal"]
offline-minimal = []
cli = []
python = []
wasm = []
grpc = []
intel_sgx = []
amd_sev = []
full-sdk = [
    "cli",
    "grpc",
    "intel_sgx",
    "amd_sev",
]
full = ["full-sdk"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = true
codegen-units = 1

[[example]]
name = "sovereign_data"
path = "examples/sovereign_data.rs"

[[example]]
name = "zktensor_inference"
path = "examples/zktensor_inference.rs"

[[example]]
name = "trade_finance"
path = "examples/trade_finance.rs"

[[bench]]
name = "crypto_benchmarks"
harness = false
