[package]
name = "aethelred-cli"
version = "2.0.0"
edition = "2021"
authors = ["Aethelred Team"]
description = "Advanced CLI for Aethelred AI Blockchain"
license = "Apache-2.0"
repository = "https://github.com/AethelredFoundation/aethelred-cli"
keywords = ["blockchain", "ai", "cli", "aethelred"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "aethelred"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.4"
clap_mangen = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Terminal UI
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
prettytable-rs = "0.10"
rustyline = "14.0"
console = "0.15"
textwrap = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Crypto
rand = "0.8"
ring = "0.17"

# Build info
vergen = { version = "8.3", features = ["git", "rustc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[build-dependencies]
vergen = { version = "8.3", features = ["git", "rustc"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
