[package]
name = "helix-guard"
version = "1.0.0"
edition = "2021"
authors = ["Aethelred Labs <engineering@aethelred.io>"]
description = "Project Helix-Guard: Sovereign Genomics Collaboration Platform for M42"
license = "Apache-2.0"
repository = "https://github.com/aethelred/helix-guard"
documentation = "https://docs.aethelred.io/helix-guard"
keywords = ["genomics", "sovereign-ai", "tee", "healthcare", "privacy"]
categories = ["cryptography", "science", "simulation"]

[features]
default = ["full"]
full = ["tee-sgx", "tee-nitro", "zkml"]
tee-sgx = []      # Intel SGX support
tee-nitro = []    # AWS Nitro Enclaves support
zkml = []         # Zero-knowledge ML proof support

[[bin]]
name = "helix-guard"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_arrays = "0.1"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Numeric
rust_decimal = { version = "1.33", features = ["serde", "maths"] }
rust_decimal_macros = "1.33"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Bioinformatics (mock)
# In production, would use: bio = "1.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
